--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,13 @@
     <label>Nueva lista de compra:
       <input #listName />
     </label>
-    <button ion-button (click)="addItem(listName.value); listName.value='';">Añadir lista de compra</button>
+    <button ion-button (click)="addList(listName.value); listName.value='';">Añadir lista de compra</button>
   </form>  
+
+  <ion-list>
+    <ion-item *ngFor="let list of shoppingLists">
+      <ion-label>{{list.name}} - {{item.price}}</ion-label>
+    </ion-item>
+  </ion-list>
   
 </ion-content>
